MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>UAE-Based</fullName>
            </value>
            <value>
                <fullName>International Broker</fullName>
            </value>
            <value>
                <fullName>Referral Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>