MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Approval_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Level 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>