MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Approval_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Level 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>