MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1 Approved</fullName>
            </value>
            <value>
                <fullName>Level 1 Rejected</fullName>
            </value>
            <value>
                <fullName>Level 2 Approved</fullName>
            </value>
            <value>
                <fullName>Level 2 Rejected</fullName>
            </value>
            <value>
                <fullName>Level 3 Approved</fullName>
            </value>
            <value>
                <fullName>Level 3 Rejected</fullName>
            </value>
            <value>
                <fullName>Level 4 Approved</fullName>
            </value>
            <value>
                <fullName>Level 4 Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>