MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Bank_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Status__c</fullName>
    <label>Bank Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>