MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Bank_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>