MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>