MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Bank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Branch Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>