MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Broker_Manager__c.field-meta.xml
<CustomField>
    <fullName>Broker_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registrations4</relationshipName>
    <type>Lookup</type>
</CustomField>