MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>