MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company City</label>
    <length>225</length>
    <type>Text</type>
</CustomField>