MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Company_Landline_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Landline_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Landline Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>