MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Company_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Mobile Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>