MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Confirm_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Confirm_IBAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>