MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Currency_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Currency_of_Account__c</fullName>
    <label>Currency of Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>