MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Does_the_Owner_have_POA__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Owner_have_POA__c</fullName>
    <label>Does the Owner have POA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>