MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/EID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EID_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Expiry Date</label>
    <type>Date</type>
</CustomField>