MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Emirates_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>