MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Federal_Tax_Authority_Registration__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Authority_Registration__c</fullName>
    <label>Federal Tax Authority Registration??</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>