MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/IBAN_Country_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Country_Bank_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN / Country Bank Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>