MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Is_Owner_and_Manager_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_and_Manager_Same__c</fullName>
    <label>Is Owner and Manager Same</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>