MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>