MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Office_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Admin_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Admin Email</label>
    <type>Email</type>
</CustomField>