MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>