MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>