MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/PassfortApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PassfortApprovalStatus__c</fullName>
    <label>PassfortApprovalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Requires Resubmission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>