MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/PassfortComment__c.field-meta.xml
<CustomField>
    <fullName>PassfortComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PassfortComment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>