MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/profileId__c.field-meta.xml
<CustomField>
    <fullName>profileId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>profileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>