MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/ProfileUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>ProfileUpdateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProfileUpdateTime</label>
    <type>DateTime</type>
</CustomField>