MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/PurposeOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>PurposeOfTransaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PurposeOfTransaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>