MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Registration_OTP__c.field-meta.xml
<CustomField>
    <fullName>Registration_OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>