MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Secret key for the registration, handed to the browser by MBP_RegistrationGatewayController once the record is created or the email OTP is verified. Keep it off layouts and off the guest profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Internal security token. Do not edit.</inlineHelpText>
    <label>Session Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>