MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/SourceOfIncome__c.field-meta.xml
<CustomField>
    <fullName>SourceOfIncome__c</fullName>
    <label>SourceOfIncome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Others (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>