MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Swift Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>