MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/SWIFT_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_Sort_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SWIFT/Sort Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>