MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/Type_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Registration__c</fullName>
    <label>Type of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International Broker</fullName>
            </value>
            <value>
                <fullName>UAE Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>