MODON MRE BPDEV/force-app/main/default/objects/Registration__c/fields/UAE_VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>UAE_VAT_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UAE VAT Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>